Fix layout issue, add cookie consent and twitter-timeline

--- a/assets/scss/sections/_damon-dark.scss
+++ b/assets/scss/sections/_damon-dark.scss
@@ -45,6 +45,7 @@
     
     a {
         color: $secondary;
+        word-break: break-all;
     };
 
     hr {
