--- a/assets/scss/sections/_damon-light.scss
+++ b/assets/scss/sections/_damon-light.scss
@@ -41,6 +41,7 @@
 
     a {
         color: $primary;
+        word-break: break-all;
     };
 
     hr {
